add dataset stats api to viz
