# ymir/backend/src/ymir_viz/src/swagger/swagger.yaml
@@ -58,6 +58,58 @@ paths:
         "400":
           description: Dataset not exists
       x-openapi-router-controller: src.controllers.dataset_controller
+  /users/{user_id}/repositories/{repo_id}/branches/{branch_id}/dataset_stats:
+    get:
+      tags:
+      - dataset
+      summary: get dataset class stats
+      description: get dataset class stats
+      operationId: get_dataset_stats
+      parameters:
+      - name: user_id
+        in: path
+        description: user_id
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: repo_id
+        in: path
+        description: repo_id
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: branch_id
+        in: path
+        description: branch_id
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: class_ids
+        in: query
+        description: class_ids
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: array
+          items:
+            type: integer
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DatasetResult'
+        "400":
+          description: Dataset not exists
+      x-openapi-router-controller: src.controllers.dataset_controller
   /users/{user_id}/repositories/{repo_id}/branches/{branch_id}/assets:
     get:
       tags:
@@ -662,3 +714,4 @@ components:
           type: integer
         score:
           type: integer
+
